feat: issue/workspace archive
